--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -71,7 +71,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../builds (godot)/godot wild jam 71/Unexpected Impacts (web).html"
+export_path="../../builds (godot)/godot wild jam 71/Unexpected Impacts (web)/Unexpected Impacts (web).html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -109,7 +109,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../builds (godot)/godot wild jam 71/Unexpected Impacts (linux).x86_64"
+export_path="../../builds (godot)/godot wild jam 71/Unexpected Impacts (linux)/Unexpected Impacts (linux).x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
